samples/_failures_safe/1761457184_72a873_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69f91a3e.c: In function ‘main’:
./samples/SAFE/__tmp_69f91a3e.c:159: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_69f91a3e.c:158:15: note: to match this ‘(’
  158 |     if (!fgets(input, sizeof(input), stdin
      |               ^
./samples/SAFE/__tmp_69f91a3e.c:158:5: error: expected declaration or statement at end of input
  158 |     if (!fgets(input, sizeof(input), stdin
      |     ^~
